<resources>
    <string name="app_name">MyTabLayout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="tab_text_1">REGISTER</string>
    <string name="tab_text_2">LOGIN</string>
    <string name="Homepage">Homepage</string>
    <string name="welcome">Welcome back</string>
</resources>